--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary">#03306F</color>
+    <color name="primary_dark">#02204F</color>
+    <color name="primary_text">#242424</color>
+    <color name="secondary_text">#696969</color>
+    <color name="white">#CCCCCC</color>
+    <color name="input_background">#BBBBBB</color>
+    <color name="icon_background">#BBBBBB</color>
+    <color name="error">#AF0069</color>
+    <color name="received_message_background">#01102F</color>
 </resources>
