--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -119,7 +119,7 @@
             android:textAllCaps="true"/>
 
         <TextView
-            android:id="@+id/textCreateNewAccount"
+            android:id="@+id/textSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_30sdp"
