--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Chat" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Chat" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="android:statusBarColor">@color/primary</item>
     </style>
 
-    <!--    <style name="Theme.Chat" parent="Base.Theme.Chat" />-->
+    <style name="Theme.Chat" parent="Base.Theme.Chat" />
 </resources>
